--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,17 @@ jobs:
             project_id: 'datafi-415911'
             workload_identity_provider: 'projects/638956850939/locations/global/workloadIdentityPools/github/providers/my-repo'
 
+        - name: Deploy to Cloud Run
+          id: deploy
+          uses: 'google-github-actions/deploy-cloudrun@v2'
+          with:
+            service: 'dashboards-grpc'
+            region: 'europe-north1'
+            # NOTE: If required, update to the appropriate source folder
+            source: ./
+
+        # If required, use the Cloud Run url output in later steps
+        - name: Show Output
+          run: echo ${{ steps.deploy.outputs.url }}
+
+
