--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,9 @@ jobs:
             project_id: 'datafi-415911'
             workload_identity_provider: 'projects/638956850939/locations/global/workloadIdentityPools/github/providers/my-repo'
 
+        - name: Print
+          run: env | sort
+
         - name: Deploy to Cloud Run
           id: deploy
           uses: 'google-github-actions/deploy-cloudrun@v2'
