--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,9 +17,7 @@ jobs:
           with:
             project_id: 'datafi-415911'
             workload_identity_provider: 'projects/638956850939/locations/global/workloadIdentityPools/github/providers/my-repo'
-
-        - name: Print
-          run: env | sort
+            service_account: 'github@datafi-415911.iam.gserviceaccount.com'
 
         - name: Deploy to Cloud Run
           id: deploy
