--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,19 +13,34 @@ jobs:
     steps:
         - uses: actions/checkout@v4
         
-        - uses: 'google-github-actions/auth@v2'
+        - name: Google Auth
+          id: auth
+          uses: 'google-github-actions/auth@v2'
           with:
+            token_format: 'access_token'
             workload_identity_provider: 'projects/638956850939/locations/global/workloadIdentityPools/github/providers/my-repo'
             service_account: 'github-deploy@datafi-415911.iam.gserviceaccount.com'
+        
+        - name: Docker Auth
+          id: docker-auth
+          uses: 'docker/login-action@v3'
+          with:
+            username: 'oauth2accesstoken'
+            password: '${{ steps.auth.outputs.access_token }}'
+            registry: 'europe-north1-docker.pkg.dev'
 
+        - name: Build and Push Container
+          run: |-
+            docker build -t "europe-north1-docker.pkg.dev/datafi-415911/cloud-run-source-deploy/dashboards-grpc:${{ github.sha }}" .
+            docker push "europe-north1-docker.pkg.dev/datafi-415911/cloud-run-source-deploy/dashboards-grpc:${{ github.sha }}"
+        
         - name: Deploy to Cloud Run
           id: deploy
           uses: 'google-github-actions/deploy-cloudrun@v2'
           with:
-            service: 'dashboards-grpc'
-            region: 'europe-north1'
-            # NOTE: If required, update to the appropriate source folder
-            source: ./
+            service: dashboards-grpc
+            region: europe-north1
+            image: europe-north1-docker.pkg.dev/datafi-415911/cloud-run-source-deploy/dashboards-grpc:${{ github.sha }}
 
         # If required, use the Cloud Run url output in later steps
         - name: Show Output
